--- a/Configs.json
+++ b/Configs.json
@@ -1,117 +1,167 @@
 [
-          {
-          "id": "0012",
-          "config_title": "[System] Menu Làm Nghẽn Mạng 999+ ver Turtle",
-          "config_subtitle": "4.9 (1.8N) • Menu - System",
-          "config_icon": "https://i.pinimg.com/564x/f9/d7/99/f9d799ee2eb7a75457ece0212e08a80e.jpg",
-          "config_guide": "Sg4_rk8u-xE",
-          "config_feature": "Làm nghẽn mạng trong thời gian ngắn",
-          "config_list_image": ["oFNFxtwBOs4", "LNgUyEV9BBo", "4zW6oOQpI_I", "https://i.imgur.com/ChWj1f8.jpeg", "https://i.imgur.com/WYv4Kjg.jpeg"],
-          "game_support": "ffn-ffa-ffm-fft",
-          "is_pro": false,
-          "is_active": true,
-          "has_menu": true,
-          "antiban_level": 100,
-          "update_time": "00:00:00 18/10/2024",
-          "download_url": "",
-          "file_name": "",
-          "file_size": 0,
-          "file_list_name": [],
-          "source_path": "",
-          "target_path": "",
-          "has_vpn": "",
-          "add_permission": "VPN"
-     },
-     {
-          "id": "0011",
-          "config_title": "[System] Panel Regedit System ver Dragon",
-          "config_subtitle": "5.0 (25) • Panel - System",
-          "config_icon": "https://i.pinimg.com/564x/41/38/18/413818b4327bf2361643eb59bb31f2d5.jpg",
-          "config_guide": "a-EkxCp3iEs",
-          "config_feature": "",
-          "config_list_image": ["VB49O3l6zEE"],
-          "game_support": "ffn-ffa-ffm",
-          "is_pro": false,
-          "is_active": true,
-          "has_menu": true,
-          "antiban_level": 100,
-          "update_time": "00:00:00 14/08/2024",
-          "download_url": "https://www.mediafire.com/file/azxt9j0t7q48e0a/83719364018382919301.zip/file",
-          "file_name": "83719364018382919301.zip",
-          "file_size": 126579836,
-          "file_list_name": [],
-          "source_path": "/Dragon",
-          "target_path": "Android/data/%s",
-          "has_vpn": "",
-          "add_permission": ""
-     },
-     {
-          "id": "0010",
-          "config_title": "[Data] Menu Định Vị Người Xanh ver Bear",
-          "config_subtitle": "4.6 (25) • Menu - Data",
-          "config_icon": "https://i.pinimg.com/564x/56/45/b1/5645b1cabb1c7d79fe12d0e78f62feea.jpg",
-          "config_guide": "a-EkxCp3iEs",
-          "config_feature": "",
-          "config_list_image": ["gNIeiWA3eOw", "https://i.pinimg.com/564x/1e/41/5b/1e415b541c20ac7e1b2a6678e3d2a2ee.jpg", "https://i.pinimg.com/474x/3c/0c/24/3c0c24451b3ec36e71ac17bbed2c8472.jpg", "https://i.pinimg.com/564x/98/85/44/988544262c6f18fa7d4b47e875355230.jpg"],
-          "game_support": "ffn-ffa",
-          "is_pro": false,
-          "is_active": true,
-          "has_menu": true,
-          "antiban_level": 80,
-          "update_time": "00:00:00 03/10/2024",
-          "download_url": "https://www.mediafire.com/file/s6n1cycui0arv4d/04575e7f55b1eb84cb8e30d79cd53ac5.zip/file",
-          "file_name": "04575e7f55b1eb84cb8e30d79cd53ac5.zip",
-          "file_size": 94676146,
-          "file_list_name": [],
-          "source_path": "/Bear",
-          "target_path": "Android/data/%s",
-          "has_vpn": "Demoder VPN",
-          "add_permission": ""
-     },
-      {
-          "id": "0009",
-          "config_title": "[Data] Menu Cam Xa Bắn Xuyên Tường ver Owl",
-          "config_subtitle": "0.0 (0) • Menu - Data",
-          "config_icon": "https://i.pinimg.com/564x/99/6e/d0/996ed0454abf73b35c3b946465cc1d94.jpg",
-          "config_guide": "a-EkxCp3iEs",
-          "config_feature": "",
-          "config_list_image": ["rk1DhPh-0GM", "https://i.imgur.com/TB2661M.jpeg"],
-          "game_support": "ffn",
-          "is_pro": false,
-          "is_active": false,
-          "has_menu": true,
-          "antiban_level": 80,
-          "update_time": "00:00:00 14/08/2024",
-          "download_url": "https://www.mediafire.com/file/azxt9j0t7q48e0a/83719364018382919301.zip/file",
-          "file_name": "83719364018382919301.zip",
-          "file_size": 126579836,
-          "file_list_name": [],
-          "source_path": "/Owl",
-          "target_path": "Android/data/%s",
-          "has_vpn": "Demoder VPN",
-          "add_permission": ""
-     },
-     {
-          "id": "0008",
-          "config_title": "[OBB] Menu Regedit 4.0 & Định Vị ver Lion",
-          "config_subtitle": "4.0 (20) • Menu - OBB",
-          "config_icon": "https://i.pinimg.com/564x/af/98/0d/af980d2112388c4189a840476fb7bd4b.jpg",
-          "config_guide": "a-EkxCp3iEs",
-          "config_feature": "",
-          "config_list_image": ["rk1DhPh-0GM"],
-          "game_support": "ffn",
-          "is_pro": false,
-          "is_active": true,
-          "has_menu": true,
-          "antiban_level": 60,
-          "update_time": "00:00:00 08/08/2024",
-          "download_url": "https://www.mediafire.com/file/kihkgv8ch2h41lq/config.zip/file",
-          "file_name": "config.zip",
-          "file_size": 12359323,
-          "file_list_name": ["config.1", "config.2", "config.3"],
-          "source_path": "/Lion",
-          "target_path": "Android/obb/%s",
-          "has_vpn": "Demoder VPN",
-          "add_permission": ""
-     }
+  {
+    "id": "0013",
+    "config_title": "[Data] Menu Headshot & Định Vị NPC ver Panther",
+    "config_subtitle": "5.0 (1) • Menu - Data",
+    "config_icon": "https://i.pinimg.com/564x/bb/11/f7/bb11f701901648d3b7565dc415d68c1f.jpg",
+    "config_guide": "",
+    "config_feature": "",
+    "config_list_image": [
+      "gNIeiWA3eOw",
+      "https://i.pinimg.com/564x/1e/41/5b/1e415b541c20ac7e1b2a6678e3d2a2ee.jpg",
+      "https://i.pinimg.com/474x/3c/0c/24/3c0c24451b3ec36e71ac17bbed2c8472.jpg",
+      "https://i.pinimg.com/564x/98/85/44/988544262c6f18fa7d4b47e875355230.jpg"
+    ],
+    "game_support": "ffa",
+    "is_pro": false,
+    "is_active": true,
+    "has_menu": true,
+    "antiban_level": 60,
+    "update_time": "00:00:00 30/10/2024",
+    "download_url": "https://www.mediafire.com/file/s6n1cycui0arv4d/04575e7f55b1eb84cb8e30d79cd53ac5.zip/file",
+    "file_name": "04575e7f55b1eb84cb8e30d79cd53ac5.zip",
+    "file_size": 94676146,
+    "file_list_name": [],
+    "source_path": "/Panther",
+    "target_path": "Android/data/%s",
+    "has_vpn": "Demoder VPN",
+    "add_permission": ""
+  },
+  {
+    "id": "0012",
+    "config_title": "[System] Menu Làm Nghẽn Mạng 999+ ver Turtle",
+    "config_subtitle": "4.9 (1.8N) • Menu - System",
+    "config_icon": "https://i.pinimg.com/564x/f9/d7/99/f9d799ee2eb7a75457ece0212e08a80e.jpg",
+    "config_guide": "Sg4_rk8u-xE",
+    "config_feature": "Làm nghẽn mạng trong thời gian ngắn",
+    "config_list_image": [
+      "oFNFxtwBOs4",
+      "LNgUyEV9BBo",
+      "4zW6oOQpI_I",
+      "https://i.imgur.com/ChWj1f8.jpeg",
+      "https://i.imgur.com/WYv4Kjg.jpeg"
+    ],
+    "game_support": "ffn-ffa-ffm-fft",
+    "is_pro": false,
+    "is_active": true,
+    "has_menu": true,
+    "antiban_level": 100,
+    "update_time": "00:00:00 18/10/2024",
+    "download_url": "",
+    "file_name": "",
+    "file_size": 0,
+    "file_list_name": [],
+    "source_path": "",
+    "target_path": "",
+    "has_vpn": "",
+    "add_permission": "VPN"
+  },
+  {
+    "id": "0011",
+    "config_title": "[System] Panel Regedit System ver Dragon",
+    "config_subtitle": "5.0 (25) • Panel - System",
+    "config_icon": "https://i.pinimg.com/564x/41/38/18/413818b4327bf2361643eb59bb31f2d5.jpg",
+    "config_guide": "a-EkxCp3iEs",
+    "config_feature": "",
+    "config_list_image": [
+      "VB49O3l6zEE"
+    ],
+    "game_support": "ffn-ffa-ffm",
+    "is_pro": false,
+    "is_active": true,
+    "has_menu": true,
+    "antiban_level": 100,
+    "update_time": "00:00:00 14/08/2024",
+    "download_url": "https://www.mediafire.com/file/azxt9j0t7q48e0a/83719364018382919301.zip/file",
+    "file_name": "83719364018382919301.zip",
+    "file_size": 126579836,
+    "file_list_name": [],
+    "source_path": "/Dragon",
+    "target_path": "Android/data/%s",
+    "has_vpn": "",
+    "add_permission": ""
+  },
+  {
+    "id": "0010",
+    "config_title": "[Data] Menu Định Vị Người Xanh ver Bear",
+    "config_subtitle": "4.6 (25) • Menu - Data",
+    "config_icon": "https://i.pinimg.com/564x/56/45/b1/5645b1cabb1c7d79fe12d0e78f62feea.jpg",
+    "config_guide": "a-EkxCp3iEs",
+    "config_feature": "",
+    "config_list_image": [
+      "gNIeiWA3eOw",
+      "https://i.pinimg.com/564x/1e/41/5b/1e415b541c20ac7e1b2a6678e3d2a2ee.jpg",
+      "https://i.pinimg.com/474x/3c/0c/24/3c0c24451b3ec36e71ac17bbed2c8472.jpg",
+      "https://i.pinimg.com/564x/98/85/44/988544262c6f18fa7d4b47e875355230.jpg"
+    ],
+    "game_support": "ffn-ffa",
+    "is_pro": false,
+    "is_active": true,
+    "has_menu": true,
+    "antiban_level": 80,
+    "update_time": "00:00:00 03/10/2024",
+    "download_url": "https://www.mediafire.com/file/s6n1cycui0arv4d/04575e7f55b1eb84cb8e30d79cd53ac5.zip/file",
+    "file_name": "04575e7f55b1eb84cb8e30d79cd53ac5.zip",
+    "file_size": 94676146,
+    "file_list_name": [],
+    "source_path": "/Bear",
+    "target_path": "Android/data/%s",
+    "has_vpn": "Demoder VPN",
+    "add_permission": ""
+  },
+  {
+    "id": "0009",
+    "config_title": "[Data] Menu Cam Xa Bắn Xuyên Tường ver Owl",
+    "config_subtitle": "0.0 (0) • Menu - Data",
+    "config_icon": "https://i.pinimg.com/564x/99/6e/d0/996ed0454abf73b35c3b946465cc1d94.jpg",
+    "config_guide": "a-EkxCp3iEs",
+    "config_feature": "",
+    "config_list_image": [
+      "rk1DhPh-0GM",
+      "https://i.imgur.com/TB2661M.jpeg"
+    ],
+    "game_support": "ffn",
+    "is_pro": false,
+    "is_active": false,
+    "has_menu": true,
+    "antiban_level": 80,
+    "update_time": "00:00:00 14/08/2024",
+    "download_url": "https://www.mediafire.com/file/azxt9j0t7q48e0a/83719364018382919301.zip/file",
+    "file_name": "83719364018382919301.zip",
+    "file_size": 126579836,
+    "file_list_name": [],
+    "source_path": "/Owl",
+    "target_path": "Android/data/%s",
+    "has_vpn": "Demoder VPN",
+    "add_permission": ""
+  },
+  {
+    "id": "0008",
+    "config_title": "[OBB] Menu Regedit 4.0 & Định Vị ver Lion",
+    "config_subtitle": "4.0 (20) • Menu - OBB",
+    "config_icon": "https://i.pinimg.com/564x/af/98/0d/af980d2112388c4189a840476fb7bd4b.jpg",
+    "config_guide": "a-EkxCp3iEs",
+    "config_feature": "",
+    "config_list_image": [
+      "rk1DhPh-0GM"
+    ],
+    "game_support": "ffn",
+    "is_pro": false,
+    "is_active": true,
+    "has_menu": true,
+    "antiban_level": 60,
+    "update_time": "00:00:00 08/08/2024",
+    "download_url": "https://www.mediafire.com/file/kihkgv8ch2h41lq/config.zip/file",
+    "file_name": "config.zip",
+    "file_size": 12359323,
+    "file_list_name": [
+      "config.1",
+      "config.2",
+      "config.3"
+    ],
+    "source_path": "/Lion",
+    "target_path": "Android/obb/%s",
+    "has_vpn": "Demoder VPN",
+    "add_permission": ""
+  }
 ]
